tests/snapshots/parse_failure__long_fraction.snap
---
source: tests/parse_failure.rs
expression: "format_output_snapshot(json, &annotated)"
---
case --- 
439043098908430980982412345678009987.6654433231123413847890813843897873986381727319297072310970972784365768257862
stdout --- 
439043098908430980982412345678009987.6654433231123413847890813843897873986381727319297072310970972784365768257862
stderr --- 
<empty>
