tests/snapshots/parse_failure__minus_sign.snap
---
source: tests/parse_failure.rs
expression: "format_output_snapshot(json, &annotated)"
---
case --- 
-
stdout --- 
<empty>
stderr --- 
error: expected digit following minus sign, found no significant characters
 --> stdin:1:1
  |
1 | -
  | ^
  | |
  | minus sign found here
  |
help: insert placeholder digits after the minus sign
  |
1 | -194
  |  +++
