tests/snapshots/parse_failure__missing_fraction.snap
---
source: tests/parse_failure.rs
expression: "format_output_snapshot(json, &annotated)"
---
case --- 
98.
stdout --- 
<empty>
stderr --- 
error: expected fraction digit following dot, found no significant characters
 --> stdin:1:3
  |
1 | 98.
  | --^
  | | |
  | | decimal point found here
  | number found here
  |
help: insert placeholder digit after the decimal point
  |
1 | 98.0
  |    +
