tests/snapshots/parse_failure__negative_float_with_exponent.snap
---
source: tests/parse_failure.rs
expression: "format_output_snapshot(json, &annotated)"
---
case --- 
-98.25e12
stdout --- 
-98.25e12
stderr --- 
<empty>
