tests/snapshots/parse_failure__object_empty_then_open.snap
---
source: tests/parse_failure.rs
expression: "format_output_snapshot(json, &annotated)"
---
case --- 
{}{
stdout --- 
<empty>
stderr --- 
error: unexpected token `{` after json finished
 --> stdin:1:3
  |
1 | {}{
  |   ^
  |
help: consider removing the trailing content (starting with `{`)
  |
1 - {}{
1 + {}
  |
